added_the_background_title

--- a/index.html
+++ b/index.html
@@ -49,13 +49,15 @@
 
     <main>
       <section class="section-one">
-        <div class="container section-one-container">
-          <h1 class="section-one-title">
-            Effective Solutions for Your Business
-          </h1>
-          <button class="section-one-button" type="button">
-            <span class="button">Order Service</span>
-          </button>
+        <div class="background">
+          <div class="container section-one-container">
+            <h1 class="section-one-title">
+              Effective Solutions for Your Business
+            </h1>
+            <button class="section-one-button" type="button">
+              <span class="button">Order Service</span>
+            </button>
+          </div>
         </div>
       </section>
 
