--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-list-item">
+              <img src="./images/antenna.svg" alt="antenna" width:="64"
+              height:="64"/>
               <h3 class="advantages-item-name">Strategy</h3>
               <p class="advantages-item-description">
                 Our goal is to identify the business problem to walk away with
@@ -73,6 +75,8 @@
               </p>
             </li>
             <li class="advantages-list-item">
+              <img src="./images/clock.svg" alt="clock" width:="64"
+              height:="64">
               <h3 class="advantages-item-name">Punctuality</h3>
               <p class="advantages-item-description">
                 Bring the key message to the brand's audience for the best price
@@ -80,6 +84,8 @@
               </p>
             </li>
             <li class="advantages-list-item">
+              <img src="./images/diagram.svg" alt="diagram" width:="64"
+              height:="64" >
               <h3 class="advantages-item-name">Diligence</h3>
               <p class="advantages-item-description">
                 Research and confirm brands that present the strongest digital
@@ -87,6 +93,8 @@
               </p>
             </li>
             <li class="advantages-list-item">
+              <img src="./images/astronaut.svg" alt="astronaut" width:="64"
+              height:="64">
               <h3 class="advantages-item-name">Technologies</h3>
               <p class="advantages-item-description">
                 Design practice focused on digital experiences. We bring forth a
