--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-list-item">
-              <svg class="images" width="64"
-                height="64"><use href="./images/icon.svg#icon-antenna"></use>
-               </svg>
+              <svg class="images" width="64" height="64">
+                <use href="./images/icons.svg.svg#icon-antenna"></use>
+              </svg>
               <h3 class="advantages-item-name">Strategy</h3>
               <p class="advantages-item-description">
                 Our goal is to identify the business problem to walk away with
@@ -78,19 +78,19 @@
               </p>
             </li>
             <li>
-              <svg class="images" width="64"
-                height="64"> <use href="./images/icon.svg#icon-clock"></use>
+              <svg class="images" width="64" height="64">
+                <use href="./images/icons.svg.svg#icon-clock"></use>
               </svg>
               <h3 class="advantages-item-name">Punctuality</h3>
-               <p class="advantages-item-description">
+              <p class="advantages-item-description">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
             <li class="advantages-list-item">
-              <svg class="images"width="64"
-                height="64"><use href="./images/icon.svg#icon-diagram"></use>
-        </svg>
+              <svg class="images" width="64" height="64">
+                <use href="./images/icons.svg.svg#icon-diagram"></use>
+              </svg>
               <h3 class="advantages-item-name">Diligence</h3>
               <p class="advantages-item-description">
                 Research and confirm brands that present the strongest digital
@@ -98,10 +98,9 @@
               </p>
             </li>
             <li class="advantages-list-item">
-              <svg
-                class="images"
-                width="64"
-                height="64"> <use href="./images/icon.svg#icon-astronaut"></use></svg>
+              <svg class="images" width="64" height="64">
+                <use href="./images/icons.svg.svg#icon-astronaut"></use>
+              </svg>
               <h3 class="advantages-item-name">Technologies</h3>
               <p class="advantages-item-description">
                 Design practice focused on digital experiences. We bring forth a
@@ -129,22 +128,22 @@
                 <ul class="social-link">
                   <li class="link">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg.svg#icon-instagram"></use>
                     </svg>
                   </li>
                   <li class="link">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg.svg#icon-twitter"></use>
                     </svg>
                   </li>
                   <li class="link">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="link">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg.svg#icon-linkedin"></use>
                     </svg>
                   </li>
                 </ul>
@@ -158,22 +157,22 @@
                 <ul class="social-link">
                   <li class="link">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg.svg#icon-instagram"></use>
                     </svg>
                   </li>
                   <li class="link">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg.svg#icon-twitter"></use>
                     </svg>
                   </li>
                   <li class="link">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="link">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg.svg#icon-linkedin"></use>
                     </svg>
                   </li>
                 </ul>
@@ -192,22 +191,22 @@
                 <ul class="social-link">
                   <li class="link">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg.svg#icon-instagram"></use>
                     </svg>
                   </li>
                   <li class="link">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg.svg#icon-twitter"></use>
                     </svg>
                   </li>
                   <li class="link">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="link">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg.svg#icon-linkedin"></use>
                     </svg>
                   </li>
                 </ul>
@@ -226,22 +225,22 @@
                 <ul class="social-link">
                   <li class="link">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg.svg#icon-instagram"></use>
                     </svg>
                   </li>
                   <li class="link">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg.svg#icon-twitter"></use>
                     </svg>
                   </li>
                   <li class="link">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="link">
                     <svg class="icon" width="16" height="16">
-                      <use href="./images/icon.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg.svg#icon-linkedin"></use>
                     </svg>
                   </li>
                 </ul>
@@ -377,39 +376,40 @@
     <footer class="footer">
       <div class="container footer-container">
         <div class="logo-text">
-        <a class="footer-logo" href="./index.html"
-          >Web<span class="footer-studio">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="footer-studio">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
         </div>
-      <div class="media">
-        <p class="social-media">Social media</p>
-        <ul class="footer-link">
-          <li class="link-icon">
-            <svg class="icon" width="16" height="16">
-              <use href="./images/icon.svg#icon-instagram"></use>
-            </svg>
-          </li>
-          <li class="link-icon">
-            <svg class="icon" width="16" height="16">
-              <use href="./images/icon.svg#icon-twitter"></use>
-            </svg>
-          </li>
-          <li class="link-icon">
-            <svg class="icon" width="16" height="16">
-              <use href="./images/icon.svg#icon-facebook"></use>
-            </svg>
-          </li>
-          <li class="link-icon">
-            <svg class="icon" width="16" height="16">
-              <use href="./images/icon.svg#icon-linkedin"></use>
-            </svg>
-          </li>
-          </div>
-     </div>
+        <div class="media">
+          <p class="social-media">Social media</p>
+          <ul class="footer-link">
+            <li class="link-icon">
+              <svg class="icon" width="16" height="16">
+                <use href="./images/icons.svg.svg#icon-instagram"></use>
+              </svg>
+            </li>
+            <li class="link-icon">
+              <svg class="icon" width="16" height="16">
+                <use href="./images/icons.svg.svg#icon-twitter"></use>
+              </svg>
+            </li>
+            <li class="link-icon">
+              <svg class="icon" width="16" height="16">
+                <use href="./images/icons.svg.svg#icon-facebook"></use>
+              </svg>
+            </li>
+            <li class="link-icon">
+              <svg class="icon" width="16" height="16">
+                <use href="./images/icons.svg.svg#icon-linkedin"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
