--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-list-item">
-              <svg class="images" width="64" height="64">
-                <use href="./images/icons.svg.svg#icon-antenna"></use>
-              </svg>
+              <div class="images">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="advantages-item-name">Strategy</h3>
               <p class="advantages-item-description">
                 Our goal is to identify the business problem to walk away with
@@ -78,9 +80,11 @@
               </p>
             </li>
             <li>
-              <svg class="images" width="64" height="64">
-                <use href="./images/icons.svg.svg#icon-clock"></use>
-              </svg>
+              <div class="images">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="advantages-item-name">Punctuality</h3>
               <p class="advantages-item-description">
                 Our goal is to identify the business problem to walk away with
@@ -88,9 +92,11 @@
               </p>
             </li>
             <li class="advantages-list-item">
-              <svg class="images" width="64" height="64">
-                <use href="./images/icons.svg.svg#icon-diagram"></use>
-              </svg>
+              <div class="images">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="advantages-item-name">Diligence</h3>
               <p class="advantages-item-description">
                 Research and confirm brands that present the strongest digital
@@ -98,9 +104,11 @@
               </p>
             </li>
             <li class="advantages-list-item">
-              <svg class="images" width="64" height="64">
-                <use href="./images/icons.svg.svg#icon-astronaut"></use>
-              </svg>
+              <div class="images">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="advantages-item-name">Technologies</h3>
               <p class="advantages-item-description">
                 Design practice focused on digital experiences. We bring forth a
@@ -126,25 +134,45 @@
                 <h3 class="section-team-name">Mark Guerrero</h3>
                 <p class="section-team-profession">Product Designer</p>
                 <ul class="social-link">
-                  <li class="link">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg.svg#icon-instagram"></use>
-                    </svg>
+                  <li>
+                    <a
+                      class="link"
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                    >
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="link">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg.svg#icon-twitter"></use>
-                    </svg>
+                  <li>
+                    <a class="link" href="https://twitter.com/" target="_blank">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="link">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg.svg#icon-facebook"></use>
-                    </svg>
+                  <li>
+                    <a
+                      class="link"
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                    >
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="link">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg.svg#icon-linkedin"></use>
-                    </svg>
+                  <li>
+                    <a
+                      class="link"
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                    >
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -155,25 +183,45 @@
                 <h3 class="section-team-name">Tom Ford</h3>
                 <p class="section-team-profession">Frontend Developer</p>
                 <ul class="social-link">
-                  <li class="link">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg.svg#icon-instagram"></use>
-                    </svg>
+                  <li>
+                    <a
+                      class="link"
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                    >
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="link">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg.svg#icon-twitter"></use>
-                    </svg>
+                  <li>
+                    <a class="link" href="https://twitter.com/" target="_blank">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="link">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg.svg#icon-facebook"></use>
-                    </svg>
+                  <li>
+                    <a
+                      class="link"
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                    >
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="link">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg.svg#icon-linkedin"></use>
-                    </svg>
+                  <li>
+                    <a
+                      class="link"
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                    >
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -189,25 +237,45 @@
                 <h3 class="section-team-name">Camila Garcia</h3>
                 <p class="section-team-profession">Marketing</p>
                 <ul class="social-link">
-                  <li class="link">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg.svg#icon-instagram"></use>
-                    </svg>
+                  <li>
+                    <a
+                      class="link"
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                    >
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="link">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg.svg#icon-twitter"></use>
-                    </svg>
+                  <li>
+                    <a class="link" href="https://twitter.com/" target="_blank">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="link">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg.svg#icon-facebook"></use>
-                    </svg>
+                  <li>
+                    <a
+                      class="link"
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                    >
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="link">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg.svg#icon-linkedin"></use>
-                    </svg>
+                  <li>
+                    <a
+                      class="link"
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                    >
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -223,25 +291,45 @@
                 <h3 class="section-team-name">Daniel Wilson</h3>
                 <p class="section-team-profession">UI Designer</p>
                 <ul class="social-link">
-                  <li class="link">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg.svg#icon-instagram"></use>
-                    </svg>
+                  <li>
+                    <a
+                      class="link"
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                    >
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="link">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg.svg#icon-twitter"></use>
-                    </svg>
+                  <li>
+                    <a class="link" href="https://twitter.com/" target="_blank">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="link">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg.svg#icon-facebook"></use>
-                    </svg>
+                  <li>
+                    <a
+                      class="link"
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                    >
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="link">
-                    <svg class="icon" width="16" height="16">
-                      <use href="./images/icons.svg.svg#icon-linkedin"></use>
-                    </svg>
+                  <li>
+                    <a
+                      class="link"
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                    >
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -387,25 +475,45 @@
         <div class="media">
           <p class="social-media">Social media</p>
           <ul class="footer-link">
-            <li class="link-icon">
-              <svg class="icon" width="16" height="16">
-                <use href="./images/icons.svg.svg#icon-instagram"></use>
-              </svg>
+            <li>
+              <a
+                class="link-icon"
+                href="https://www.instagram.com/"
+                target="_blank"
+              >
+                <svg class="icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="link-icon">
-              <svg class="icon" width="16" height="16">
-                <use href="./images/icons.svg.svg#icon-twitter"></use>
-              </svg>
+            <li>
+              <a class="link-icon" href="https://twitter.com/" target="_blank">
+                <svg class="icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="link-icon">
-              <svg class="icon" width="16" height="16">
-                <use href="./images/icons.svg.svg#icon-facebook"></use>
-              </svg>
+            <li>
+              <a
+                class="link-icon"
+                href="https://www.facebook.com/"
+                target="_blank"
+              >
+                <svg class="icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
-            <li class="link-icon">
-              <svg class="icon" width="16" height="16">
-                <use href="./images/icons.svg.svg#icon-linkedin"></use>
-              </svg>
+            <li>
+              <a
+                class="link-icon"
+                href="https://www.linkedin.com/"
+                target="_blank"
+              >
+                <svg class="icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
