--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <h3 class="section-team-name">Mark Guerrero</h3>
                 <p class="section-team-profession">Product Designer</p>
                 <ul class="social-link">
-                  <li>
+                  <li class="social-link-item">
                     <a
                       class="link"
                       href="https://www.instagram.com/"
@@ -145,14 +145,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-link-item">
                     <a class="link" href="https://twitter.com/" target="_blank">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-link-item">
                     <a
                       class="link"
                       href="https://www.facebook.com/"
@@ -163,7 +163,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-link-item">
                     <a
                       class="link"
                       href="https://www.linkedin.com/"
@@ -183,7 +183,7 @@
                 <h3 class="section-team-name">Tom Ford</h3>
                 <p class="section-team-profession">Frontend Developer</p>
                 <ul class="social-link">
-                  <li>
+                  <li class="social-link-item">
                     <a
                       class="link"
                       href="https://www.instagram.com/"
@@ -194,14 +194,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-link-item">
                     <a class="link" href="https://twitter.com/" target="_blank">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-link-item">
                     <a
                       class="link"
                       href="https://www.facebook.com/"
@@ -212,7 +212,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-link-item">
                     <a
                       class="link"
                       href="https://www.linkedin.com/"
@@ -237,7 +237,7 @@
                 <h3 class="section-team-name">Camila Garcia</h3>
                 <p class="section-team-profession">Marketing</p>
                 <ul class="social-link">
-                  <li>
+                  <li class="social-link-item">
                     <a
                       class="link"
                       href="https://www.instagram.com/"
@@ -248,14 +248,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-link-item">
                     <a class="link" href="https://twitter.com/" target="_blank">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-link-item">
                     <a
                       class="link"
                       href="https://www.facebook.com/"
@@ -266,7 +266,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-link-item">
                     <a
                       class="link"
                       href="https://www.linkedin.com/"
@@ -291,7 +291,7 @@
                 <h3 class="section-team-name">Daniel Wilson</h3>
                 <p class="section-team-profession">UI Designer</p>
                 <ul class="social-link">
-                  <li>
+                  <li class="social-link-item">
                     <a
                       class="link"
                       href="https://www.instagram.com/"
@@ -302,14 +302,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-link-item">
                     <a class="link" href="https://twitter.com/" target="_blank">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-link-item">
                     <a
                       class="link"
                       href="https://www.facebook.com/"
@@ -320,7 +320,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-link-item">
                     <a
                       class="link"
                       href="https://www.linkedin.com/"
@@ -475,7 +475,7 @@
         <div class="media">
           <p class="social-media">Social media</p>
           <ul class="footer-link">
-            <li>
+            <li class="footer-link-item">
               <a
                 class="link-icon"
                 href="https://www.instagram.com/"
@@ -486,25 +486,25 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="footer-link-item">
               <a class="link-icon" href="https://twitter.com/" target="_blank">
                 <svg class="icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="footer-link-item">
               <a
                 class="link-icon"
                 href="https://www.facebook.com/"
                 target="_blank"
               >
-                <svg class="icon" width="16" height="16">
+                <svg class="icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="footer-link-item">
               <a
                 class="link-icon"
                 href="https://www.linkedin.com/"
