--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             >Web<span class="studio">Studio</span></a
           >
           <ul class="menu-list">
-            <li class="current">
+            <li class="">
               <a class="menu-item current" href="./index.html">Studio</a>
             </li>
             <li><a class="menu-item" href="">Portfolio</a></li>
