--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               Effective Solutions for Your Business
             </h1>
             <button class="section-one-button" type="button">
-              <span class="button">Order Service</span>
+              Order Service
             </button>
           </div>
         </div>
